Fix brand diagram wrap

--- a/styles/block/_brand.scss
+++ b/styles/block/_brand.scss
@@ -39,8 +39,7 @@
     }
 
     &__converter-text {
-        display: block;
-
+        white-space: nowrap;
 
         &:nth-child(1)::after,
         &:nth-child(2)::before {
